--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,23 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+              <!--打包构建时跳过单元测试-->
+              <skipTests>true</skipTests>
+          </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.0.1</version>
+            <executions>
+                <execution>
+                    <id>attach-sources</id>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                </execution>
+            </executions>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -82,4 +99,11 @@
       </plugins>
     </pluginManagement>
   </build>
+  <distributionManagement>
+      <repository>
+          <id>github</id>
+          <name>Github maven package</name>
+          <url>https://maven.pkg.github.com/gcs-zhn/jvision</url>
+      </repository>
+  </distributionManagement>
 </project>
