--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,19 @@
         <artifactId>itext</artifactId>
         <version>2.1.7</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-csv</artifactId>
+        <version>1.9.0</version>
+    </dependency>
+    <!--lombok插件-->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.20</version>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
